<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">民警端</string>
    <string name="login_title">非机动车处罚系统民警端</string>
    <string name="register">注册</string>
    <string name="update">修改</string>
    <string name="add">提交</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="user_before_pass_word">原密码</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="password_again">再次输入</string>
    <string name="name">姓名</string>
    <string name="name1">姓名:</string>
    <string name="gender">性别</string>
    <string name="nationality">国籍(区域)</string>
    <string name="document_type">证件类型</string>
    <string name="native_place">籍贯</string>
    <string name="id_number">证件号码</string>
    <string name="id_number1">证件号码:</string>
    <string name="validity">证件有效期</string>
    <string name="time">时间</string>
    <string name="illegal_time">违法时间</string>
    <string name="illegal_time1">违法时间:</string>
    <string name="illegal_place">违法地点</string>
    <string name="illegal_behavior">违法类型</string>
    <string name="illegal_behavior1">违法类型:</string>
    <string name="punishment_type">处罚类型</string>
    <string name="punishment_money">处罚金额</string>
    <string name="payment">交款方式</string>
    <string name="car_number">车辆车牌</string>
    <string name="sex_n">男</string>
    <string name="sex_v">女</string>
    <string name="id_photo_hini">左边扫描身份证正面，右边扫描反面</string>
    <string name="default_nationality">中华人民共和国</string>
    <string name="default_document_type">中国居民身份证</string>
    <string name="default_native_place">北京市</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">姓名/身份证号/车牌号</string>
    <string name="empty_h1">暂时没有数据</string>
    <string name="empty_h2">（如果是查询无数据，请尝试点击搜索图标）</string>
    <string name="empty_h3">（如果是当前无数据，请尝试下拉刷新数据）</string>
    <string name="audit">审核</string>
    <string name="audit_type">审核类型:</string>
    <string name="tag_image">非法图片采集：</string>
    <string name="tag_is_agree">是否通过：</string>
    <string name="tag_hini">输入您审核的意见</string>
    <string name="tag_input">审核的意见</string>
    <string name="title_activity_illegal_case_detailectivity">违法消息详情如下</string>
</resources>
