<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_empty"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/fail"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/tv_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_empty"
        android:layout_centerHorizontal="true"
        android:text="@string/empty_h1"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tv_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_h1"
        android:layout_centerHorizontal="true"
        android:text="@string/empty_h2"
        android:textColor="@color/black"
        />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_h2"
        android:layout_centerHorizontal="true"
        android:text="@string/empty_h3"
        android:textColor="@color/black"
        />
    



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
