<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activitys.RegisterActivity">
    <include layout="@layout/title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="30dp"
            android:layout_width="fill_parent"
            android:id="@+id/ti_name"

            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_user_pass_word_before"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:maxLength="48"
                android:hint="@string/user_before_pass_word"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:id="@+id/ti_password"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:saveEnabled="false"
                android:maxLength="48"
                android:hint="@string/new_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:id="@+id/ti_password_again"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:saveEnabled="false"
                android:maxLength="48"
                android:hint="@string/password_again"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/user_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg_blue"/>

    </LinearLayout>

</LinearLayout>