<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_info"
            android:layout_marginEnd="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="5dp"
                android:id="@+id/iv_w_flag"
                android:src="@mipmap/weifaicon"
                android:layout_width="40dp"
                android:layout_height="40dp" />
            <TextView
                android:layout_below="@+id/iv_w_flag"
                android:text="@string/name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:textSize="16sp"/>
            <TextView
                android:layout_below="@+id/iv_w_flag"
                android:id="@+id/tv_off_name_item"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_below="@id/tv_off_name_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/id_number1"
                android:textSize="16sp"/>

            <TextView
                android:layout_below="@id/tv_off_name_item"
                android:id="@+id/tv_off_id_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_alignParentEnd="true"
                android:textSize="16sp"/>

            <TextView

                android:layout_below="@id/tv_off_id_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/illegal_behavior1"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_off_type_item"
                android:layout_below="@id/tv_off_id_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_alignParentEnd="true"

                android:textSize="16sp"/>

            <TextView
                android:layout_below="@id/tv_off_type_item"
                android:text="@string/illegal_time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:textSize="16sp"/>
            <TextView
                android:layout_below="@id/tv_off_type_item"
                android:id="@+id/tv_off_time_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_alignParentEnd="true"
                android:textSize="16sp"/>


        </RelativeLayout>
        <ImageView
            android:id="@+id/iv_more"
            android:src="@mipmap/right"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
    <View
        android:layout_below="@+id/rl_info"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/gray"/>


</RelativeLayout>